--- a/src/common/less/mixin.less
+++ b/src/common/less/mixin.less
@@ -13,6 +13,12 @@
 	}
 }
 
+.border-none(){
+	&::after{
+		display: none;
+	}
+}
+
 .bg-img(@url){
 	background-image:url("@{url}@2x.png");
 	@media(-webkit-min-device-pixel-radio:3),(min-device-pixel-radio:3){
